2021-09-29 Gregory John Casamento <greg.casamento@gmail.com>

	* TextConverters/RTF/RTFConsumer.m: Improve error message for
	when a field being added to the RTF document is NULL.

2021-09-29 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSComboBox.h: Add @optional to protocol
	declarations for NSComboBoxDelegate and NSComboBoxDataSource.

2021-06-17 Riccardo Mottola <rm@gnu.org>

	* Source/NSHelpPanel.m: (initWithContentRect)
	When initializing the text view do not use the document view
	of the scroll view which is not yet set and invalid.
	(Fixes exceptions/crashes)

2021-05-20 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/AppKit.h: Add NSStackView.h to header.
	* Headers/AppKit/NSStackView.h: Header
	* MISSING: Remove NSStackView from the list and update others.
	* Source/GNUmakefile: Add NSStackView.[hm] to GNUmakefile.
	* Source/GSXib5KeyedUnarchiver.m: Add decoders and mappings to decode
        NSStackView content.
	* Source/NSStackView.m: Implementation of NSStackView.

2021-05-01 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSXibLoading.h: Add declaration
        for customClassNames so that we can use that to collect the names
        of all of the custom classes and their associations.
	* Source/GNUmakefile: Remove classes which are not used.
	* Source/GSXib5KeyedUnarchiver.m: In parserDidStartElement...
        call isInInterfaceBuilder to determine if we should allocate
        custom classes.
	* Source/GSXibLoading.m: Add in code in nibInstantiate which uses
        [NSClassSwapper isInInterfaceBuilder] to prevent connections
        from being established if the XIB is being loaded in IB/Gorm.

2021-04-30 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSModelLoaderFactory.h:
        Declaration of canReadData: in the GSModelLoader class and
        declaration of modelLoaderForData: in GSModelLoaderFactory.